fixed z-index

--- a/apps/web/src/components/ItemCard/ItemCard.css
+++ b/apps/web/src/components/ItemCard/ItemCard.css
@@ -14,7 +14,7 @@
   top: 0;
   padding: 8px;
   margin: 8px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .ItemCard .CompareButton {
